--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -5,13 +5,12 @@
 
 - [1. 功能概述](#1-功能概述)
 - [2. 虚拟机模式: Guest Mode](#2-虚拟机模式-guest-mode)
-- [3. External Access Protection: 外部访问保护](#3-external-access-protection-外部访问保护)
-- [4. 带有标记的TLB](#4-带有标记的tlb)
+- [3. 外部访问保护: External Access Protection](#3-外部访问保护-external-access-protection)
+- [4. 带有标记的TLB: Tagged TLB](#4-带有标记的tlb-tagged-tlb)
 - [5. 中断支持: Interrupt Support](#5-中断支持-interrupt-support)
 - [6. 可重启的指令: Restartable Instructions](#6-可重启的指令-restartable-instructions)
 
 <!-- /code_chunk_output -->
-
 
 virtualization support, 虚拟化支持
 
@@ -34,13 +33,13 @@ CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用.
 
 特性指示位 `CPUID Fn0000_0001_ECX[31]` 已预留给VMM使用，以表示存在VMM。VMM存在, 则此位为1, 物理CPU的话, 此位设为0。这个位可以被guest探测，以检测它们是否在虚拟机中运行。
 
-# 3. External Access Protection: 外部访问保护
+# 3. 外部访问保护: External Access Protection
 
 **guest**可以被授予**直接访问选定的I/O设备**.
 
 而硬件支持旨在防止一个guest拥有的**设备**访问**另一个客户！！！** (或**VMM！！！)** 拥有的**内存**。即DMA操作.
 
-# 4. 带有标记的TLB
+# 4. 带有标记的TLB: Tagged TLB
 
 在SVM模型中，VMM映射到不同于客户机的地址，为了减少切换的开销，TLB用**地址空间ID**（Address Space Identifier，ASID）进行标识，用来将**主机空间条目**与**客户机空间条目**区分开。
 
