--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/2. 安全支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/2. 安全支持.md
@@ -19,8 +19,8 @@ SKINIT指令和相关的系统支持(Trusted Platform Module，TPM, 可信平台
 
 # 2. 加密内存: Encrypted Memory
 
-模型支持, 安全加密虚拟化(股票)和加密的状态(SEV-ES)签订扩展防范检查内存和(SEV-ES)客人注册状态通过恶意程序代码,跟踪或内存内存总线设备去除通过加密客户内存和寄存器的内容(`34. 安全加密虚拟化`和`35. `)。
+模型支持, 安全加密虚拟化(股票)和加密的状态(SEV-ES)签订扩展防范检查内存和(SEV-ES)客人注册状态通过恶意程序代码,跟踪或内存内存总线设备去除通过加密客户内存和寄存器的内容(`34. 安全加密虚拟化`和`35. 加密状态`)。
 
 # 3. 安全的嵌套分页: Secure Nested Paging
 
-在支持它的模型上, SEV-SNP扩展为客户内存提供了额外的保护，防止hypervisor代码恶意操纵地址转换机制。(15.36节)。
+在支持它的模型上, SEV-SNP扩展为客户内存提供了额外的保护，防止hypervisor代码恶意操纵地址转换机制。(`36. 安全的嵌套分页`)。
