--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
@@ -1,5 +1,16 @@
 VMRUN Instruction
 
+SVM的核心构架包括**指令VMRUN**(`5. VMRUN指令`)和**拦截操作**(`7. 拦截操作`)。
+
+? 基于虚拟机运行（Virtual Machine Run，VMRUN）指令VMRUN。
+
+? Hypervisor执行VMRUN，引起客户机运行在客户机模式（Guest Mode）。
+
+? 客户机运行直到它退回到Hypervisor。
+
+? Hypervisor在VMRUN指令后恢复运行。
+
+? 切换方式为：Hypervisor?客户? Hypervisor
 
 VMRUN指令是SVM的基石。它使用一个参数：一个指向**4KB对齐页**的**物理地址**。该物理页描述了执行的虚拟机（客户机），称为**虚拟机控制块**（Virtual Machine Control Block，VMCB）。
 
