--- a/Virtualization/Learning/AMD虚拟化/SVM/3. SVM处理器和平台扩展/处理器和平台扩展.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/3. SVM处理器和平台扩展/处理器和平台扩展.md
@@ -8,3 +8,11 @@ SVM**硬件扩展**可以分为**以下类别**：
 * 外部（DMA）访问保护（`24. 外部访问保护`）
 * 嵌套分页支持，用于两个级别的地址转换。(`25. 嵌套分页`)
 * 安全性 - SKINIT指令。(`27. 使用SKINIT安全启动`)
+
+SVM的**核心构架**包括**指令VMRUN**(`5. VMRUN指令`)和**拦截操作**(`7. 拦截操作`)。
+
+1. 基于虚拟机运行（Virtual Machine Run，VMRUN）指令VMRUN。
+2. Hypervisor执行VMRUN，引起客户机运行在客户机模式（Guest Mode）。
+3. 客户机运行直到它退回到Hypervisor。
+4. Hypervisor执行VMRUN指令后恢复运行。
+5. 切换方式为：Hypervisor -> 虚拟机 -> Hypervisor
