--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -1,4 +1,17 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [VMRUN流程](#vmrun流程)
+- [保存主机状态: Saving Host State](#保存主机状态-saving-host-state)
+- [加载虚拟机状态: Loading Guest State](#加载虚拟机状态-loading-guest-state)
+- [控制位: Control Bits](#控制位-control-bits)
+- [](#)
+
+<!-- /code_chunk_output -->
+
+# VMRUN流程
 
 VMRUN指令具有`[rAX]`的**隐式寻址模式**。软件必须使用**VMCB的物理地址加载RAX**（32位模式下的EAX），VMCB是一个 4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
 
@@ -11,19 +24,20 @@ VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。
 3. VMRUN还从**VMCB**读取**其他控制位**，这些控制位**允许VMM刷新guest TLB**、**向guest中注入虚拟中断**等; 
 4. 然后，VMRUN指令**检查刚加载的guest状态**。
     * 如果加载了**非法状态**，则处理器将**返回主机**（`6. VMEXIT`）。
-5. 否则，处理器现在将**运行guest代码**，直到发生**拦截事件**为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为`#VMEXIT`，并在`6. VMEXIT`中进行了详细描述。
+5. 否则，处理器现在将**运行guest代码**，直到发生**拦截事件**为止
+6. 在**拦截点**, 处理器将**挂起guest**并按照**VMRUN之后的指令**恢复主机执行。这称为`#VMEXIT`，并在`6. VMEXIT`中进行了详细描述。
 
 VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后恢复执行。这样, VMM可以快速处理简单的拦截条件。如果VMM必须**保存**或**还原**其他guest状态信息（例如，**处理更复杂的拦截**或**切换到其他guest**），则VMM必须使用**VMLOAD**和**VMSAVE指令**来处理其他guest状态。 （`5.2 VMSAVE和VMLOAD指令`）。
 
 # 保存主机状态: Saving Host State
 
-Saving Host State。为确保主机可以在`#VMEXIT`之后继续运行，VMRUN至少保存以下主机状态信息：
+为确保**主机**可以在`#VMEXIT`之后继续运行, VMRUN至少保存以下主机状态信息：
 
-* CS.SEL，NEXT_RIP-VMRUN之后的指令的CS选择器和rIP。在`#VMEXIT`上，主机将在该地址恢复运行。
-* RFLAGS，RAX-主机处理器模式和VMRUN用于寻址VMCB的寄存器。
-* SS.SEL，RSP-主机的堆栈指针。
-* CR0，CR3，CR4，EFER-主机的分页/操作模式。
-* IDTR，GDTR-伪描述符。 VMRUN不会保存或还原主机LDTR。
+* `CS.SEL`、`NEXT_RIP` - VMRUN之后的指令的**CS选择器**和**rIP**。在`#VMEXIT`上，主机将在该地址恢复运行。
+* RFLAGS、RAX-主机处理器模式和VMRUN用于寻址VMCB的寄存器。
+* SS.SEL、RSP-主机的堆栈指针。
+* CR0、CR3、CR4、EFER-主机的分页/操作模式。
+* IDTR、GDTR-伪描述符。 VMRUN不会保存或还原主机LDTR。
 * ES.SEL和DS.SEL。
 
 处理器实现可以在VM_HSAVE_PA MSR指向的存储区域中仅存储主机状态的一部分或不存储任何主机状态，并且可以将某些或全部主机状态存储在隐藏的片上存储器中。不同的实现方式可能会选择保存主机的段寄存器以及选择器的隐藏部分。由于这些原因，软件不得使用主机状态保存区的格式或内容，也不得尝试通过修改主机保存区的内容来更改主机状态。
