--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -33,12 +33,12 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 为确保**主机**可以在`#VMEXIT`之后继续运行, VMRUN至少保存以下主机状态信息：
 
-* `CS.SEL`、`NEXT_RIP` - VMRUN之后的指令的**CS选择器**和**rIP**。在`#VMEXIT`上，主机将在该地址恢复运行。
-* RFLAGS、RAX-主机处理器模式和VMRUN用于寻址VMCB的寄存器。
-* SS.SEL、RSP-主机的堆栈指针。
-* CR0、CR3、CR4、EFER-主机的分页/操作模式。
-* IDTR、GDTR-伪描述符。 VMRUN不会保存或还原主机LDTR。
-* ES.SEL和DS.SEL。
+* `CS.SEL`、`NEXT_RIP` - VMRUN之后的指令的**CS选择器**和**rIP**。在`#VMEXIT`上，主机将在**该地址恢复运行**。
+* `RFLAGS`、`RAX` - **主机处理器模式**和**VMRUN**用于**寻址VMCB**的寄存器。
+* `SS.SEL`、`RSP` - 主机的**堆栈指针**。
+* `CR0`、`CR3`、`CR4`、`EFER` - 主机的分页/操作模式。
+* `IDTR`、`GDTR` - 伪描述符。 VMRUN不会保存或还原主机LDTR。
+* `ES.SEL`和`DS.SEL`。
 
 处理器实现可以在VM_HSAVE_PA MSR指向的存储区域中仅存储主机状态的一部分或不存储任何主机状态，并且可以将某些或全部主机状态存储在隐藏的片上存储器中。不同的实现方式可能会选择保存主机的段寄存器以及选择器的隐藏部分。由于这些原因，软件不得使用主机状态保存区的格式或内容，也不得尝试通过修改主机保存区的内容来更改主机状态。
 
