--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -46,17 +46,18 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 Loading Guest State。保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
 
-•CS，rIP-guest从此地址开始执行。 CS段寄存器的隐藏状态也从VMCB加载。
-•RFLAGS，RAX。
-•SS，RSP-包括SS段寄存器的隐藏状态。
-•CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
-•INTERRUPT_SHADOW-此标志指示guest当前是否处于中断锁定阴影中； （第15.21.5节）。
-•IDTR，GDTR。
-•ES和DS-包括段寄存器的隐藏状态。
-•DR6和DR7-guest的断点状态。
-•V_TPR-guest的虚拟TPR。
-•V_IRQ-该标志指示虚拟中断是否在客户机中挂起。
-•CPL-如果guest处于实模式，则CPL被强制为0；否则，则为0。如果guest虚拟机处于v86模式，则将CPL强制设置为3。否则，将使用VMCB中保存的CPL。
+* CS，rIP-guest从此地址开始执行。 CS段寄存器的隐藏状态也从VMCB加载。
+* RFLAGS，RAX。
+* SS，RSP-包括SS段寄存器的隐藏状态。
+* CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
+* INTERRUPT_SHADOW-此标志指示guest当前是否处于中断锁定阴影中； （第15.21.5节）。
+* IDTR，GDTR。
+* ES和DS-包括段寄存器的隐藏状态。
+* DR6和DR7-guest的断点状态。
+* V_TPR-guest的虚拟TPR。
+* V_IRQ-该标志指示虚拟中断是否在客户机中挂起。
+* CPL-如果guest处于实模式，则CPL被强制为0；否则，则为0。如果guest虚拟机处于v86模式，则将CPL强制设置为3。否则，将使用VMCB中保存的CPL。
+
 处理器检查加载的guest状态的一致性。如果在加载guest状态时一致性检查失败，则处理器将执行#VMEXIT。有关更多信息，请参阅第459页“规范化和一致性检查”。
 如果根据刚刚加载的寄存器guest处于PAE分页模式，并且未启用嵌套分页，则处理器还将读取新加载的CR3值所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
 VMRUN指令有可能加载guestrIP，该guestrIP超出guest代码段的限制或非规范（如果以长模式运行）。如果发生这种情况，则会在guest内部传递一个`#GP`错误；超出guest代码段限制的rIP不会被视为非法guest状态。
