--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -44,9 +44,9 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 # 加载虚拟机状态: Loading Guest State
 
-Loading Guest State。保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
+保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
 
-* CS，rIP-guest从此地址开始执行。 CS段寄存器的隐藏状态也从VMCB加载。
+* CS、rIP - guest从此地址开始执行。CS段寄存器的隐藏状态也从VMCB加载。
 * RFLAGS，RAX。
 * SS，RSP-包括SS段寄存器的隐藏状态。
 * CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
