--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -461,6 +461,24 @@ QEMU邮件列表的说明可参考 http://wiki.qemu.org/MailingLists 。
 
 三是回复别人邮件时尽量**在他人提问题的地方**进行**相应的回复**，而**不是**直接将内容写在**邮件的开头部分**。
 
+1. 配置 send-mail , 
+
+```
+[sendemail]
+	from = lihaiwei.kernel@gmail.com
+	smtpserver = smtp.gmail.com
+	smtpserverport = 587
+	smtpencryption = tls
+	smtpuser = lihaiwei.kernel@gmail.com
+	smtppass = "XXX"
+	suppresscc = self
+	chainreplyto = false
+```
+
+```
+sudo git send-email --to linux-kernel@vger.kernel.org,kvm@vger.kernel.org,x86@kernel.org --cc pbonzini@redhat.com,sean.j.christopherson@intel.com,vkuznets@redhat.com outgoing/*
+```
+
 #### 3.1.1.2. 其他方式
 
 除了邮件列表之外，
