--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -461,9 +461,38 @@ QEMU邮件列表的说明可参考 http://wiki.qemu.org/MailingLists 。
 
 三是回复别人邮件时尽量**在他人提问题的地方**进行**相应的回复**，而**不是**直接将内容写在**邮件的开头部分**。
 
-1. 配置 send-mail , 
+1. 修改代码
+2. 提交时使用`-s`参数进行签名
 
 ```
+git commit -s
+```
+
+3. 生成补丁
+
+```
+git format-patch -2 --cover-letter -o outgoing/
+```
+
+4. 检查补丁格式
+
+```
+scripts/get_maintainer.pl outgoing/*
+```
+
+5. 配置 send-mail , 强烈建议使用命令, 不要直接改config, 因为可能涉及格式问题
+
+```
+git config --global user.name "Haiwei Li"
+git config --global user.email lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserver smtp.gmail.com
+git config --global sendemail.smtpuser lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserverport 587
+git config --global sendemail.smtpencryption tls
+```
+
+```conf
+# ~/.gitconfig
 [sendemail]
 	from = lihaiwei.kernel@gmail.com
 	smtpserver = smtp.gmail.com
@@ -474,6 +503,14 @@ QEMU邮件列表的说明可参考 http://wiki.qemu.org/MailingLists 。
 	suppresscc = self
 	chainreplyto = false
 ```
+
+6. 获取maintainer
+
+```
+scripts/get_maintainer.pl outgoing/*
+```
+
+7. 发送布丁
 
 ```
 sudo git send-email --to linux-kernel@vger.kernel.org,kvm@vger.kernel.org,x86@kernel.org --cc pbonzini@redhat.com,sean.j.christopherson@intel.com,vkuznets@redhat.com outgoing/*
