--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -40,13 +40,13 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `IDTR`、`GDTR` - 伪描述符。 VMRUN**不会**保存或还原**主机LDTR**。
 * `ES.SEL`和`DS.SEL`。
 
-处理器实现可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在隐藏的**片上存储器**(on-chip memory)中。**不同的实现方式**可能会选择保存主机的**段寄存器**以及**选择器的隐藏部分**。由于这些原因，**软件**不得使用主机状态保存区的格式或内容，也不得尝试通过修改主机保存区的内容来更改主机状态。
+处理器实现可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在**隐藏**的**片上存储器**(on-chip memory)中。**不同的实现方式**可能会选择保存主机的**段寄存器**以及**选择器的隐藏部分**。由于这些原因，**软件**不得使用主机状态保存区的格式或内容，也不得尝试通过修改主机保存区的内容来更改主机状态。
 
 # 加载虚拟机状态: Loading Guest State
 
 保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
 
-* CS、rIP - guest从此地址开始执行。CS段寄存器的隐藏状态也从VMCB加载。
+* **CS、rIP** - guest从此地址开始执行。**CS段寄存器**的**隐藏状态**也从VMCB加载。
 * RFLAGS，RAX。
 * SS，RSP-包括SS段寄存器的隐藏状态。
 * CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
