--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -47,7 +47,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
 
 * **CS、rIP** - guest从此地址开始执行。**CS段寄存器**的**隐藏状态**也从VMCB加载。
-* RFLAGS，RAX。
+* **RFLAGS、RAX**。
 * SS，RSP-包括SS段寄存器的隐藏状态。
 * CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
 * INTERRUPT_SHADOW-此标志指示guest当前是否处于中断锁定阴影中； （第15.21.5节）。
