--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -48,13 +48,13 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 * **CS、rIP** - guest从此地址开始执行。**CS段寄存器**的**隐藏状态**也从VMCB加载。
 * **RFLAGS、RAX**。
-* SS，RSP-包括SS段寄存器的隐藏状态。
-* CR0，CR2，CR3，CR4，EFER-guest分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
-* INTERRUPT_SHADOW-此标志指示guest当前是否处于中断锁定阴影中； （第15.21.5节）。
-* IDTR，GDTR。
-* ES和DS-包括段寄存器的隐藏状态。
-* DR6和DR7-guest的断点状态。
-* V_TPR-guest的虚拟TPR。
+* **SS、RSP** - 包括**SS段寄存器**的**隐藏状态**。
+* CR0、CR2、CR3、CR4、EFER - **guest分页模式**。因为**切换了地址空间**，所以用VMRUN写入与页面相关的控制寄存器**不会刷新TLB**。 （`16. TLB控制`）
+* **INTERRUPT_SHADOW** - 此标志指示guest当前是否处于中断锁定阴影中；（`21.5. 中断阴影`）。
+* IDTR、GDTR。
+* ES和DS - 包括**段寄存器**的**隐藏状态**。
+* DR6和DR7 - guest的**断点状态**。
+* V_TPR - guest的**虚拟TPR**。
 * V_IRQ-该标志指示虚拟中断是否在客户机中挂起。
 * CPL-如果guest处于实模式，则CPL被强制为0；否则，则为0。如果guest虚拟机处于v86模式，则将CPL强制设置为3。否则，将使用VMCB中保存的CPL。
 
