--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -8,6 +8,7 @@
 - [加载虚拟机状态: Loading Guest State](#加载虚拟机状态-loading-guest-state)
 - [控制位: Control Bits](#控制位-control-bits)
 - [](#)
+- [规范化和一致性检查: Canonicalization and Consistency Checks](#规范化和一致性检查-canonicalization-and-consistency-checks)
 
 <!-- /code_chunk_output -->
 
@@ -54,12 +55,14 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * IDTR、GDTR。
 * ES和DS - 包括**段寄存器**的**隐藏状态**。
 * DR6和DR7 - guest的**断点状态**。
-* V_TPR - guest的**虚拟TPR**。
-* V_IRQ-该标志指示虚拟中断是否在客户机中挂起。
-* CPL-如果guest处于实模式，则CPL被强制为0；否则，则为0。如果guest虚拟机处于v86模式，则将CPL强制设置为3。否则，将使用VMCB中保存的CPL。
+* `V_TPR` - guest的**虚拟TPR**。
+* `V_IRQ` - 该标志指示**是否有一个虚拟中断在客户机中挂起**。
+* **CPL** - 如果guest处于**实模式**，则CPL被**强制为0**；否则，若guest虚拟机处于**v86模式**，则将**CPL**强制设置为**3**。否则，将使用**VMCB**中保存的**CPL**。
 
-处理器检查加载的guest状态的一致性。如果在加载guest状态时一致性检查失败，则处理器将执行#VMEXIT。有关更多信息，请参阅第459页“规范化和一致性检查”。
-如果根据刚刚加载的寄存器guest处于PAE分页模式，并且未启用嵌套分页，则处理器还将读取新加载的CR3值所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
+处理器检查**加载的guest状态的一致性**。如果在加载guest状态时一致性检查失败，则处理器将执行`#VMEXIT`。有关更多信息，请参阅下面的`规范化和一致性检查`。
+
+如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
+
 VMRUN指令有可能加载guestrIP，该guestrIP超出guest代码段的限制或非规范（如果以长模式运行）。如果发生这种情况，则会在guest内部传递一个`#GP`错误；超出guest代码段限制的rIP不会被视为非法guest状态。
 加载所有guest状态并设置拦截器和其他控制位后，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
 某些处理器模型允许VMM将某些guestVMCB字段指定为“干净”，这意味着它们尚未相对于当前硬件状态进行修改。这允许硬件优化VMRUN的执行。有关哪些字段可能受此影响的详细信息，请参见15.15节。下面的描述假定所有字段都已加载。
@@ -96,7 +99,9 @@ VMCB中的细分状态(Segment State in the VMCB)。这些寄存器存储在VMCB
 •测试Present（P）位以检查段是否为NULL；注意，CS和TR永远不会包含NULL段，因此它们的P位将被忽略；
 •从VMCB中的CPL字段中检索CPL，而不是从任何段DPL中检索。
 
-规范化和一致性检查(。 VMRUN指令对guest状态执行一致性检查，并且#VMEXIT对主机状态执行这些一致性检查的适当子集。无效的guest状态组合导致错误代码为VMEXIT_INVALID的#VMEXIT。以下条件被视为非法状态组合：
+# 规范化和一致性检查: Canonicalization and Consistency Checks
+
+(。 VMRUN指令对guest状态执行一致性检查，并且#VMEXIT对主机状态执行这些一致性检查的适当子集。无效的guest状态组合导致错误代码为VMEXIT_INVALID的#VMEXIT。以下条件被视为非法状态组合：
 •EFER.SVME为零。
 •CR0.CD为零且CR0.NW被置位。
 •CR0 [63:32]不为零。
