--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -61,10 +61,12 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 处理器检查**加载的guest状态的一致性**。如果在加载guest状态时一致性检查失败，则处理器将执行`#VMEXIT`。有关更多信息，请参阅下面的`规范化和一致性检查`。
 
-如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
+如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**, 该值指向了四个PDPE。设置PDPE中的**任何保留位**也会导致`#VMEXIT`。
 
-VMRUN指令有可能加载guestrIP，该guestrIP超出guest代码段的限制或非规范（如果以长模式运行）。如果发生这种情况，则会在guest内部传递一个`#GP`错误；超出guest代码段限制的rIP不会被视为非法guest状态。
-加载所有guest状态并设置拦截器和其他控制位后，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
+VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
+
+加载所有guest状态后, 并设置了**拦截器**(intercepts)和其他控制位(control bits)，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
+
 某些处理器模型允许VMM将某些guestVMCB字段指定为“干净”，这意味着它们尚未相对于当前硬件状态进行修改。这允许硬件优化VMRUN的执行。有关哪些字段可能受此影响的详细信息，请参见15.15节。下面的描述假定所有字段都已加载。
 
 # 控制位: Control Bits
