--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -65,9 +65,9 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
 
-加载所有guest状态后, 并设置了**拦截器**(intercepts)和其他控制位(control bits)，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
+加载所有guest状态后, 并设置了**拦截器**(intercepts)和其他控制位(control bits)，处理器会通过将**GIF设置为1**来**重新启用中断**。假定VMM软件在执行**VMRUN指令之前**需要**清除GIF**(关闭中断)，以**确保原子状态切换**。
 
-某些处理器模型允许VMM将某些guestVMCB字段指定为“干净”，这意味着它们尚未相对于当前硬件状态进行修改。这允许硬件优化VMRUN的执行。有关哪些字段可能受此影响的详细信息，请参见15.15节。下面的描述假定所有字段都已加载。
+某些**处理器模型**允许**VMM**将**某些guest VMCB字段**指定为“**clean**”，这意味着它们尚未相对于**当前硬件状态**进行修改。这允许**硬件优化VMRUN的执行**。有关哪些字段可能受此影响的详细信息，请参见`15`节。下面的描述假定**所有字段都已加载**。
 
 # 控制位: Control Bits
 
