--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -6,6 +6,8 @@
 - [VMRUN流程](#vmrun流程)
 - [保存主机状态: Saving Host State](#保存主机状态-saving-host-state)
 - [加载虚拟机状态: Loading Guest State](#加载虚拟机状态-loading-guest-state)
+  - [保证guest状态的一致性](#保证guest状态的一致性)
+  - [PAE且未启用NPT](#pae且未启用npt)
 - [控制位: Control Bits](#控制位-control-bits)
 - [](#)
 - [规范化和一致性检查: Canonicalization and Consistency Checks](#规范化和一致性检查-canonicalization-and-consistency-checks)
@@ -59,9 +61,15 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `V_IRQ` - 该标志指示**是否有一个虚拟中断在客户机中挂起**。
 * **CPL** - 如果guest处于**实模式**，则CPL被**强制为0**；否则，若guest虚拟机处于**v86模式**，则将**CPL**强制设置为**3**。否则，将使用**VMCB**中保存的**CPL**。
 
+## 保证guest状态的一致性
+
 处理器检查**加载的guest状态的一致性**。如果在加载guest状态时一致性检查失败，则处理器将执行`#VMEXIT`。有关更多信息，请参阅下面的`规范化和一致性检查`。
 
+## PAE且未启用NPT
+
 如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**, 该值指向了四个PDPE。设置PDPE中的**任何保留位**也会导致`#VMEXIT`。
+
+
 
 VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
 
