--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -8,6 +8,7 @@
 - [加载虚拟机状态: Loading Guest State](#加载虚拟机状态-loading-guest-state)
   - [保证guest状态的一致性](#保证guest状态的一致性)
   - [PAE且未启用NPT](#pae且未启用npt)
+  - [超过段](#超过段)
 - [控制位: Control Bits](#控制位-control-bits)
 - [](#)
 - [规范化和一致性检查: Canonicalization and Consistency Checks](#规范化和一致性检查-canonicalization-and-consistency-checks)
@@ -69,7 +70,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**, 该值指向了四个PDPE。设置PDPE中的**任何保留位**也会导致`#VMEXIT`。
 
-
+## 超过段
 
 VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
 
