--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -3,19 +3,21 @@
 
 <!-- code_chunk_output -->
 
-- [VMRUN流程](#vmrun流程)
-- [保存主机状态: Saving Host State](#保存主机状态-saving-host-state)
-- [加载虚拟机状态: Loading Guest State](#加载虚拟机状态-loading-guest-state)
-  - [保证guest状态的一致性](#保证guest状态的一致性)
-  - [PAE且未启用NPT](#pae且未启用npt)
-  - [超过段限制或non-canonical](#超过段限制或non-canonical)
-- [控制位: Control Bits](#控制位-control-bits)
-- [](#)
-- [规范化和一致性检查: Canonicalization and Consistency Checks](#规范化和一致性检查-canonicalization-and-consistency-checks)
+- [1. VMRUN流程](#1-vmrun流程)
+- [2. 保存主机状态: Saving Host State](#2-保存主机状态-saving-host-state)
+- [3. 加载虚拟机状态: Loading Guest State](#3-加载虚拟机状态-loading-guest-state)
+  - [3.1. 保证guest状态的一致性](#31-保证guest状态的一致性)
+  - [3.2. PAE且未启用NPT](#32-pae且未启用npt)
+  - [3.3. 超过段限制或non-canonical](#33-超过段限制或non-canonical)
+  - [3.4. 置GIF启用中断](#34-置gif启用中断)
+  - [3.5. VMCB状态缓存](#35-vmcb状态缓存)
+- [4. 控制位: Control Bits](#4-控制位-control-bits)
+- [5.](#5)
+- [6. 规范化和一致性检查: Canonicalization and Consistency Checks](#6-规范化和一致性检查-canonicalization-and-consistency-checks)
 
 <!-- /code_chunk_output -->
 
-# VMRUN流程
+# 1. VMRUN流程
 
 VMRUN指令具有`[rAX]`的**隐式寻址模式**。软件必须使用**VMCB的物理地址加载RAX**（32位模式下的EAX），VMCB是一个 4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
 
@@ -33,7 +35,7 @@ VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。
 
 VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后恢复执行。这样, VMM可以快速处理简单的拦截条件。如果VMM必须**保存**或**还原**其他guest状态信息（例如，**处理更复杂的拦截**或**切换到其他guest**），则VMM必须使用**VMLOAD**和**VMSAVE指令**来处理其他guest状态。 （`5.2 VMSAVE和VMLOAD指令`）。
 
-# 保存主机状态: Saving Host State
+# 2. 保存主机状态: Saving Host State
 
 为确保**主机**可以在`#VMEXIT`之后继续运行, VMRUN至少保存以下主机状态信息：
 
@@ -46,7 +48,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 处理器实现可以在`VM_HSAVE_PA MSR`指向的存储区域中**仅**存储**主机状态**的**一部分**或**不存储任何主机状态**，并且可以将**某些**或**全部主机状态**存储在**隐藏**的**片上存储器**(on-chip memory)中。**不同的实现方式**可能会选择保存主机的**段寄存器**以及**选择器的隐藏部分**。由于这些原因，**软件不得！！！** 使用主机状态保存区的格式或内容，也**不得！！！** 尝试通过**修改**主机保存区的内容来更改主机状态。
 
-# 加载虚拟机状态: Loading Guest State
+# 3. 加载虚拟机状态: Loading Guest State
 
 保存主机状态后，VMRUN从**VMCB**加载以下guest状态：
 
@@ -62,40 +64,42 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 * `V_IRQ` - 该标志指示**是否有一个虚拟中断在客户机中挂起**。
 * **CPL** - 如果guest处于**实模式**，则CPL被**强制为0**；否则，若guest虚拟机处于**v86模式**，则将**CPL**强制设置为**3**。否则，将使用**VMCB**中保存的**CPL**。
 
-## 保证guest状态的一致性
+## 3.1. 保证guest状态的一致性
 
 处理器检查**加载的guest状态的一致性**。如果在加载guest状态时一致性检查失败，则处理器将执行`#VMEXIT`。有关更多信息，请参阅下面的`规范化和一致性检查`。
 
-## PAE且未启用NPT
+## 3.2. PAE且未启用NPT
 
 如果根据刚刚加载的寄存器guest处于**PAE分页模式**，并且**未启用嵌套分页**，则处理器还将读取**新加载的CR3值**, 该值指向了四个PDPE。设置PDPE中的**任何保留位**也会导致`#VMEXIT`。
 
-## 超过段限制或non-canonical
+## 3.3. 超过段限制或non-canonical
 
 VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
 
+## 3.4. 置GIF启用中断
 
+加载所有guest状态后, 并设置了**拦截器**(intercepts)和**其他控制位**(control bits)，处理器会通过将**GIF设置为1**来**重新启用中断**。假定VMM软件在执行**VMRUN指令之前**需要**清除GIF**(关闭中断)，以**确保原子状态切换**。
 
-加载所有guest状态后, 并设置了**拦截器**(intercepts)和其他控制位(control bits)，处理器会通过将**GIF设置为1**来**重新启用中断**。假定VMM软件在执行**VMRUN指令之前**需要**清除GIF**(关闭中断)，以**确保原子状态切换**。
+## 3.5. VMCB状态缓存
 
-某些**处理器模型**允许**VMM**将**某些guest VMCB字段**指定为“**clean**”，这意味着它们尚未相对于**当前硬件状态**进行修改。这允许**硬件优化VMRUN的执行**。有关哪些字段可能受此影响的详细信息，请参见`15`节。下面的描述假定**所有字段都已加载**。
+某些**处理器模型**允许**VMM**将**某些guest VMCB字段**指定为“**clean**”，这意味着它们尚未相对于**当前硬件状态**进行修改。这允许**硬件优化VMRUN的执行**。有关哪些字段可能受此影响的详细信息，请参见`15. VMCB状态缓存`节。下面的描述假定**所有字段都已加载**。
 
-# 控制位: Control Bits
+# 4. 控制位: Control Bits
 
-Control Bits。除了加载guest状态外，VMRUN指令还从**VMCB**读取多个**控制字段**；这些字段中的大多数都不会写回到`#VMEXIT`上的VMCB，因为它们在guest执行期间无法更改：
+除了加载guest状态外，VMRUN指令还从**VMCB**读取多个**控制字段**；当发生`#VMEXIT`时, 这些字段中的大多数都**不会写回**到**VMCB**，因为它们在**guest执行期间无法更改**：
 
-•TSC_OFFSET-guest读取TSC（时间戳计数器）时要添加的偏移量。可以通过更改偏移量来拦截和模拟guest写入TSC，而无需写入物理TSC。当guest退出主机时，将清除此偏移量。
-•V_INTR_PRIO，V_INTR_VECTOR，V_IGN_TPR-用于描述guest虚拟中断的字段（请参见第487页的“注入虚拟（INTR）中断”）。
-•V_INTR_MASKING-控制是否要虚拟屏蔽中断（在EFLAGS.IF和TPR中）（第15.21节）。
-•运行guest时要使用的地址空间ID（ASID）。
-•用于在VMRUN期间控制TLB刷新的字段（请参见第15.16节）。
-•描述guest活动拦截的拦截向量。从guest退出时，内部拦截寄存器将被清除，因此不会拦截任何主机操作。
+* `TSC_OFFSET` - **guest读取TSC**（时间戳计数器）时要**加上的偏移量offset**。可以通过更改偏移量来拦截和模拟guest写入TSC，而无需写入物理TSC。当guest退到主机时，将清除此偏移量。
+* V_INTR_PRIO，V_INTR_VECTOR，V_IGN_TPR-用于描述guest虚拟中断的字段（请参见第487页的“注入虚拟（INTR）中断”）。
+* V_INTR_MASKING-控制是否要虚拟屏蔽中断（在EFLAGS.IF和TPR中）（第15.21节）。
+* 运行guest时要使用的地址空间ID（ASID）。
+* 用于在VMRUN期间控制TLB刷新的字段（请参见第15.16节）。
+* 描述guest活动拦截的拦截向量。从guest退出时，内部拦截寄存器将被清除，因此不会拦截任何主机操作。
 
 处理器支持的最大ASID值是特定于实现的。执行CPUID Fn8000_000A后在EBX中返回的值是处理器支持的ASID数量。
 
 有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
 
-# 
+# 5. 
 
 VMCB中的细分状态(Segment State in the VMCB)。这些寄存器存储在VMCBina格式中，类似于SMM：基本和限制都已完全扩展；段属性存储为由原始64位（内存中）段描述符中的位55:52和47:40串联而成的12位值；在允许和/或相关的情况下，描述符“ P”位用于发信号通知空段（P = 0）。从VMCB加载段属性（可能已被软件覆盖）可能会导致原本不允许的属性位值。但是，取决于所讨论的段寄存器，硬件实际上只观察到某些属性位：
 •CS-D，L和​​R。
@@ -112,7 +116,7 @@ VMCB中的细分状态(Segment State in the VMCB)。这些寄存器存储在VMCB
 •测试Present（P）位以检查段是否为NULL；注意，CS和TR永远不会包含NULL段，因此它们的P位将被忽略；
 •从VMCB中的CPL字段中检索CPL，而不是从任何段DPL中检索。
 
-# 规范化和一致性检查: Canonicalization and Consistency Checks
+# 6. 规范化和一致性检查: Canonicalization and Consistency Checks
 
 (。 VMRUN指令对guest状态执行一致性检查，并且#VMEXIT对主机状态执行这些一致性检查的适当子集。无效的guest状态组合导致错误代码为VMEXIT_INVALID的#VMEXIT。以下条件被视为非法状态组合：
 •EFER.SVME为零。
