--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作.md
@@ -76,7 +76,7 @@ VMRUN**保存或还原最少数量的状态信息**，允许VMM在guest退出后
 
 ## 3.3. 超过段限制或non-canonical
 
-VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
+VMRUN指令有可能**加载guest rIP**，该guest rIP**超出guest代码段的限制**或rIP是`non-canonical`形式的（如果以**长模式**运行）。如果发生这种情况，则会在**guest内部**产生一个`#GP`错误；超出guest**代码段限制**的rIP**不会**被视为**非法guest状态**。
 
 ## 3.4. 置GIF启用中断
 
