--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/2. SVM硬件概述/1. 虚拟化支持.md
@@ -33,6 +33,14 @@ CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用.
 
 特性指示位 `CPUID Fn0000_0001_ECX[31]` 已预留给VMM使用，以表示存在VMM。VMM存在, 则此位为1, 物理CPU的话, 此位设为0。这个位可以被guest探测，以检测它们是否在虚拟机中运行。
 
+SVM的**核心构架**包括**指令VMRUN**(`5. VMRUN指令`)和**拦截操作**(`7. 拦截操作`)。
+
+1. 基于虚拟机运行（Virtual Machine Run，VMRUN）指令VMRUN。
+2. Hypervisor执行VMRUN，引起客户机运行在客户机模式（Guest Mode）。
+3. 客户机运行直到它退回到Hypervisor。
+4. Hypervisor执行VMRUN指令后恢复运行。
+5. 切换方式为：Hypervisor -> 虚拟机 -> Hypervisor
+
 # 3. 外部访问保护: External Access Protection
 
 **guest**可以被授予**直接访问选定的I/O设备**.
