--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -1,6 +1,24 @@
 Intercept Operation
 
+SVM的**核心构架**包括**指令VMRUN**(`5. VMRUN指令`)和**拦截操作**(`7. 拦截操作`)。
+
+1. 基于虚拟机运行（Virtual Machine Run，VMRUN）指令VMRUN。
+2. Hypervisor执行VMRUN，引起客户机运行在客户机模式（Guest Mode）。
+3. 客户机运行直到它退回到Hypervisor。
+4. Hypervisor执行VMRUN指令后恢复运行。
+5. 切换方式为：Hypervisor -> 虚拟机 -> Hypervisor
+
 guest中的各种指令和事件（例如异常）可以通过**VMCB**中的**控制位**来拦截。 
 
-SVM支持的拦截的两个主要类别是指令拦截和异常拦截。
+SVM支持的拦截的两个主要类别是**指令拦截**和**异常拦截**。
+
+# 异常拦截
+
+当正常的指令处理必须在解决可能的双重故障条件之前和尝试提供异常之前（包括推送异常帧，访问IDT等）之前引发异常时，将检查异常拦截。
+
+对于某些异常，即使**拦截了异常**，处理器仍会写入某些特定于异常的寄存器。 （有关详细信息，请参见`12. 异常拦截`和以下部分中的描述。）当拦截到**外部或虚拟中断**时，该中断将处于**挂起状态**。
+
+如果guest在使用IDT传递未拦截的中断或异常的过程中发生拦截，则SVM将提供有关`#VMEXIT`的其他信息（请参阅`7.2`）。
+
+# 指令拦截
 
