--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -18,7 +18,7 @@ SVM支持的拦截的两个主要类别是**指令拦截**和**异常拦截**。
 
 对于某些异常，即使**拦截了异常**，处理器仍会写入某些特定于异常的寄存器。 （有关详细信息，请参见`12. 异常拦截`和以下部分中的描述。）当拦截到**外部或虚拟中断**时，该中断将处于**挂起状态**。
 
-如果guest在使用IDT传递未拦截的中断或异常的过程中发生拦截，则SVM将提供有关`#VMEXIT`的其他信息（请参阅`7.2`）。
+如果guest在使用IDT传递未拦截的中断或异常的过程中发生拦截，则SVM将提供有关`#VMEXIT`的其他信息（请参阅`7.2. IDT中断交付期间的拦截`）。
 
 # 指令拦截
 
