--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
@@ -3,10 +3,10 @@
 
 <!-- code_chunk_output -->
 
-* [1 创建镜像文件](#1-创建镜像文件)
-* [2 准备ISO文件](#2-准备iso文件)
-* [3 启动虚拟机](#3-启动虚拟机)
-* [4 安装虚拟机](#4-安装虚拟机)
+- [1 创建镜像文件](#1-创建镜像文件)
+- [2 准备ISO文件](#2-准备iso文件)
+- [3 启动虚拟机](#3-启动虚拟机)
+- [4 安装虚拟机](#4-安装虚拟机)
 
 <!-- /code_chunk_output -->
 
@@ -65,7 +65,7 @@ Formatting 'rhel7.img', fmt=raw size=42949672960 preallocation=full￼
 qemu-system-x86_64 -enable-kvm -m 8G -smp 4 -boot once=d -cdrom RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso rhel7.img
 ```
 
-其中，\-m 8G是给客户机分配8G内存，\-smp 4是指定客户机为对称多处理器结构并分配4个CPU，\-boot once=d是指定系统的启动顺序为首次光驱，以后再使用默认启动项（硬盘）￼，\-cdrom\*\*是分配**客户机的光驱**。
+其中，`-m 8G`是给客户机分配8G内存，`-smp 4`是指定客户机为对称多处理器结构并分配4个CPU，`-boot once=d`是指定系统的启动顺序为首次光驱，以后再使用默认启动项（硬盘）￼，`-cdrom **`是分配**客户机的光驱**。
 
 # 4 安装虚拟机
 
