--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
@@ -861,3 +861,5 @@ static void record_steal_time(struct kvm_vcpu *vcpu)
 
 http://oenhan.com/kvm-pv-kvmclock-tsc
 
+
+https://www.haiyonghao.xyz/2020/06/08/kvmclock-dai-ma-xue-xi/ (none)
