--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
+++ b/Linux/Time/Linux时间子系统/1. clock source(时钟源).md
@@ -110,8 +110,8 @@ clocksource结构中有一个**rating字段**，代表着该时钟源的**精度
 
 在系统的启动阶段，内核注册了一个基于**jiffies**的clocksource，代码位于`kernel/time/jiffies.c`：
 
-当然，如果平台级的代码在**初始化**时也会注册真正的**硬件clocksource**，所以经过`clocksource_select()`函数后，`curr_clocksource`将会被设为最合适的clocksource。如果clocksource_select函数认为需要切换更好的时钟源，它会通过timekeeping_notify通知timekeeping系统，使用新的clocksource进行时间计数和更新操作。
+当然，如果平台级的代码在**初始化**时也会注册真正的**硬件clocksource**，所以经过`clocksource_select()`函数后，`curr_clocksource`将会被设为最合适的clocksource。如果clocksource_select函数认为需要切换更好的时钟源，它会通过timekeeping_notify通知timekeeping系统，使用新的clocksource进行**时间计数**和**更新操作**。
 
 # 6. 参考
 
-https://blog.csdn.net/DroidPhone/article/details/7975694
+https://blog.csdn.net/DroidPhone/article/details/7975694 (none)
