--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -21,7 +21,9 @@
 
 # 1. 简介
 
-前两节讨论了用于计时的时钟源：clocksource，以及内核内部时间的一些表示方法，但是对于真实的用户来说，我们感知的是真实世界的真实时间，也就是所谓的墙上时间，clocksource只能提供一个按给定频率不停递增的周期计数，如何把它和真实的墙上时间相关联？本节的内容正是要讨论这一点。
+前两节讨论了用于计时的时钟源：clocksource，以及内核内部时间的一些表示方法，但是对于真实的用户来说，我们感知的是**真实世界的真实时间**，也就是所谓的**墙上时间**.
+
+clocksource只能提供一个按**给定频率不停递增的周期计数**，如何把它和**真实的墙上时间**相关联？本节的内容正是要讨论这一点。
 
 # 2. 时间的种类
 
@@ -37,11 +39,11 @@
 
 在PC中，RTC时间又叫**CMOS时间**，它通常由一个**专门的计时硬件**来实现，软件可以读取该硬件来获得年月日、时分秒等时间信息，而在**嵌入式系统**中，有使用专门的**RTC芯片**，也有直接把RTC集成到**Soc芯片**中，读取Soc中的**某个寄存器**即可获取当前时间信息。
 
-一般来说，RTC是一种**可持续计时**的，也就是说，不管系统是否上电，RTC中的时间信息都不会丢失，计时会一直持续进行，硬件上通常使用一个**后备电池**对RTC硬件进行单独的供电。因为RTC硬件的多样性，开发者需要为**每种RTC时钟硬件**提供**相应的驱动程序**，**内核和用户空间**通过**驱动程序**访问RTC硬件来获取或设置时间信息。
+一般来说，RTC是一种**可持续计时**的，也就是说，不管系统**是否上电**，RTC中的时间信息都**不会丢失**，计时会一直持续进行，硬件上通常使用一个**后备电池**对RTC硬件进行单独的供电。因为RTC硬件的多样性，开发者需要为**每种RTC时钟硬件**提供**相应的驱动程序**，**内核和用户空间**通过**驱动程序**访问RTC硬件来获取或设置时间信息。
 
 ## 2.2. xtime
 
-xtime和RTC时间一样，都是人们日常所使用的**墙上时间**，只是**RTC时间**的精度通常比较低，大多数情况下只能达到**毫秒级别的精度**，如果是使用外部的RTC芯片，访问速度也比较慢，为此，内核维护了另外一个**wall time时间**：xtime，取决于用于对xtime计时的clocksource，它的精度甚至可以达到纳秒级别，因为xtime实际上是一个**内存中的变量**，它的访问速度非常快，内核大部分时间都是使用**xtime**来获得当前时间信息。
+**xtime**和**RTC**时间一样，都是人们日常所使用的**墙上时间**，只是**RTC时间**的精度通常**比较低**，大多数情况下只能达到**毫秒级别的精度**，如果是使用外部的RTC芯片，访问速度也比较慢，为此，内核维护了另外一个**wall time时间**：xtime，取决于用于对xtime计时的clocksource，它的精度甚至可以达到纳秒级别，因为xtime实际上是一个**内存中的变量**，它的访问速度非常快，内核大部分时间都是使用**xtime**来获得当前时间信息。
 
 xtime记录的是自**1970年1月1日24时**到**当前**时刻所经历的**纳秒数**。
 
@@ -103,7 +105,7 @@ struct timekeeper {
 };
 ```
 
-其中的xtime字段就是上面所说的**墙上时间**，它是一个timespec结构的变量，它记录了**自1970年1月1日以来所经过的时间**，因为是**timespec结构**，所以它的精度可以达到**纳秒级**，当然那要取决于系统的硬件是否支持这一精度。
+其中的xtime字段就是上面所说的**墙上时间**，它是一个timespec结构的变量，它记录了**自1970年1月1日以来所经过的时间**，因为是**timespec结构**，所以它的精度可以达到**纳秒级**，当然那要**取决于系统的硬件**是否支持这一精度。
 
 内核除了用xtime表示墙上的真实时间外，还维护了另外一个时间：**monotonic time**，可以把它理解为**自系统启动以来所经过的时间**，该时间**只能单调递增**，可以理解为xtime虽然正常情况下也是递增的，但是毕竟用户可以**主动向前或向后调整墙上时间**，从而**修改xtime值**。但是monotonic时间不可以往后退，系统启动后只能不断递增。
 
