--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -49,7 +49,7 @@ xtime记录的是自**1970年1月1日24时**到**当前**时刻所经历的**纳
 
 ## 2.3. monotonic time
 
-该时间自系统开机后就一直**单调地增加**，它不像xtime可以因用户的调整时间而产生跳变，不过该时间**不计算系统休眠的时间**，也就是说，系统休眠时，monotoic时间不会递增。
+该时间自系统开机后就一直**单调地增加**，它不像xtime可以因用户的调整时间而产生跳变，不过该时间**不计算系统休眠的时间！！！**，也就是说，系统休眠时，monotoic时间不会递增。
 
 ## 2.4. raw monotonic time
 
@@ -57,7 +57,7 @@ xtime记录的是自**1970年1月1日24时**到**当前**时刻所经历的**纳
 
 ## 2.5. boot time
 
-与monotonic时间相同，不过会累加上系统休眠的时间，它代表着系统上电后的总时间。
+与monotonic时间相同，不过会累加上系统休眠的时间，它代表着**系统上电后的总时间**。
 
 ## 2.6. 小结
 
