--- a/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
+++ b/Linux/Time/Linux时间子系统/3. 时间的维护者: timekeeper.md
@@ -171,7 +171,11 @@ void __init timekeeping_init(void)
 
 # 5. 时间的更新
 
-xtime一旦初始化完成后，**timekeeper**就开始**独立于RTC**，利用**自身关联的clocksource**进行**时间的更新操作**，根据内核的配置项的不同，更新时间的操作发生的频度也不尽相同，如果**没有配置NO\_HZ选项**，通常**每个tick**的**定时中断周期**，`do_timer`会被调用一次，相反，如果配置了`NO_HZ`选项，可能会在好几个tick后，`do_timer`才会被调用一次，当然传入的参数是本次更新离上一次更新时相隔了多少个tick周期，系统会保证在clocksource的`max_idle_ns`时间内调用do_timer，以防止clocksource的溢出：
+xtime一旦初始化完成后，**timekeeper**就开始**独立于RTC**，利用**自身关联的clocksource**进行**时间的更新操作**，根据内核的配置项的不同，更新时间的操作发生的频度也不尽相同，
+* 如果**没有**配置`NO_HZ`选项，通常**每个tick**的**定时中断周期**，`do_timer`会被调用一次，
+* 相反，如果配置了`NO_HZ`选项，可能会在好几个tick后，`do_timer`才会被调用一次，当然**传入的参数**是本次更新离上一次更新时**相隔了多少个tick周期**
+
+系统会保证在clocksource的`max_idle_ns`时间内调用`do_timer`，以防止clocksource的溢出：
 
 ```cpp
 void do_timer(unsigned long ticks)
@@ -188,7 +192,7 @@ void do_timer(unsigned long ticks)
 
 timekeeper提供了一系列的接口用于获取各种时间信息。
 
-* void getboottime(struct timespec *ts);    获取系统启动时刻的实时时间
+* `void getboottime(struct timespec *ts);`    获取系统启动时刻的实时时间
 * void get_monotonic_boottime(struct timespec *ts);     获取系统启动以来所经过的时间，包含休眠时间
 * ktime_t ktime_get_boottime(void);   获取系统启动以来所经过的c时间，包含休眠时间，返回ktime类型
 * ktime_t ktime_get(void);    获取**系统启动以来所经过的时间**，**不包含休眠时间**，返回ktime类型
