--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/0. 概述.md
@@ -18,7 +18,8 @@ SVM支持的拦截的两个主要类别是**指令拦截**和**异常拦截**。
 
 对于某些异常，即使**拦截了异常**，处理器仍会写入某些特定于异常的寄存器。 （有关详细信息，请参见`12. 异常拦截`和以下部分中的描述。）当拦截到**外部或虚拟中断**时，该中断将处于**挂起状态**。
 
-如果guest在使用IDT传递未拦截的中断或异常的过程中发生拦截，则SVM将提供有关`#VMEXIT`的其他信息（请参阅`7.2. IDT中断交付期间的拦截`）。
+如果guest在**使用IDT交付未拦截的中断或异常**的过程中**发生一个拦截**，则SVM将提供有关`#VMEXIT`的其他信息（请参阅`7.2. IDT中断交付期间的拦截`）。
 
 # 指令拦截
 
+这些发生在指令执行之前定义明确的时刻-在提交指令结果之前，但相对于指令的异常检查，以特定于拦截器的优先级进行排序。 通常，在检查了简单异常（例如#GP（CPL不正确）或#UD）之后，但在与内存访问相关的异常（例如页面错误）和基于特定操作数的异常之前，将检查指令拦截。 该指南有几个例外，例如RSM指令。 当前指令的指令断点和上一条指令的未决数据断点陷阱设计为在指令截取之前进行检查。
