--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -1,3 +1,5 @@
-触发后，拦截**将EXITCODE写入VMCB**，以标识**拦截的原因**。 **EXITINTINFO字段**指示guest是否在通过IDT传递中断或异常过程发生了拦截？ VMM可以使用此信息来透明地完成交付（第15.20节）。 某些拦截在VMCB的EXITINFO1和EXITINFO2字段中提供了其他信息。 有关详细信息，请参见各个拦截器描述。
+触发后，拦截**将EXITCODE写入VMCB**，以标识**拦截的原因**。 **EXITINTINFO字段**指示guest是否在**通过IDT delivery中断或异常过程中**发生了拦截; VMM可以**使用此信息**来透明地完成delivery（`20. 事件注入`）。 
 
-截获触发时，保存在VMCB中的guest状态是处理器状态。 在x86架构中，陷阱（与错误相对）将在触发陷阱的指令完成执行之后被检测并传递。 因此，陷阱拦截发生在最初触发陷阱的指令执行之后。 因此，保存的guest状态包括执行该指令的效果。
+某些拦截在VMCB的**EXITINFO1**和**EXITINFO2**字段中提供了**其他信息**。 有关详细信息，请参见各个拦截器描述。
+
+VMCB中保存的guest状态是拦截(intercept)触发时的处理器状态. 在x86架构中，陷阱(traps, 与错误fault相对）将在触发陷阱的指令完成执行之后被检测并传递。 因此，陷阱拦截发生在最初触发陷阱的指令执行之后。 因此，保存的guest状态包括执行该指令的效果。
