--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -1,5 +1,18 @@
+
 触发后，拦截**将EXITCODE写入VMCB**，以标识**拦截的原因**。 **EXITINTINFO字段**指示guest是否在**通过IDT delivery中断或异常过程中**发生了拦截; VMM可以**使用此信息**来透明地完成delivery（`20. 事件注入`）。 
 
 某些拦截在VMCB的**EXITINFO1**和**EXITINFO2**字段中提供了**其他信息**。 有关详细信息，请参见各个拦截器描述。
 
-VMCB中保存的guest状态是拦截(intercept)触发时的处理器状态. 在x86架构中，陷阱(traps, 与错误fault相对）将在触发陷阱的指令完成执行之后被检测并传递。 因此，陷阱拦截发生在最初触发陷阱的指令执行之后。 因此，保存的guest状态包括执行该指令的效果。
+VMCB中保存的guest状态是**拦截(intercept)触发时**的处理器状态. 在x86架构中，**陷阱**(traps, 与错误fault相对）将在**触发陷阱的指令完成执行之后！！！** 被检测并传递。 因此，陷阱拦截发生在**最初触发陷阱的指令执行之后**。 因此，保存的guest状态**包括执行该指令！！！的效果**。
+
+例子: 
+
+假设一个guest指令触发一个**数据断点**（`#DB`）**陷阱**，该陷阱又被拦截。 VMCB在执行该指令后记录guest状态，以便保存的CS：rIP指向以下指令，并且保存的DR7包含匹配数据断点的效果。
+
+下一个顺序指令指针（nRIP）保存在guestVMCB控制区域中所有#VMEXIT上的位置C8h上，这是由于15.9节中定义的指令拦截以及INT3引起的MSR和IOIO拦截和异常引起的， INTO和BOUND指令。对于所有其他拦截，nRIP重置为零。
+
+nRIP是如果当前指令要遵循陷阱样式的调试异常，并且被拦截的指令不会导致控制流发生任何变化，则将被压入堆栈的RIP。如果截获的指令会导致控制流发生变化，则nRIP指向下一个顺序指令，而不是目标指令。
+
+有些异常即使在被拦截的情况下也会写入特殊的寄存器。有关详细信息，请参见第15.12节中的个别描述。
+
+`CPUID Fn8000_000A_EDX[NRIPS]`表示支持#VMEXIT上的NRIP保存。有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
