--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/1. VMEXT的状态保存.md
@@ -9,10 +9,10 @@ VMCB中保存的guest状态是**拦截(intercept)触发时**的处理器状态. 
 
 假设一个guest指令触发一个**数据断点**(`#DB`)**陷阱**，该陷阱又被拦截。VMCB记录了**该指令执行后**的**guest状态**，以便保存的`CS：rIP`指向**下一条指令**，并且保存的**DR7**包含**匹配数据断点**的效果。(the saved DR7 includes the effects of matching the data breakpoint)
 
-**下一个顺序指令指针**(nRIP)保存在guest **VMCB控制区域**中的 `C8h` 位置上所有由于`9. 指令拦截`导致的`#VMEXIT`以及`INT3`、INTO和BOUND指令引起的MSR和IOIO拦截和异常引起的, INTO和BOUND指令。对于所有其他拦截，nRIP重置为零。
+当由于`9. 指令拦截`以及`INT3`、`INTO`和`BOUND`指令引起的**MSR和IOIO**拦截和异常导致`#VMEXIT`时, **下一个顺序指令指针**(nRIP)保存在guest **VMCB控制区域**中的 `C8h` 位置上。而对于**所有其他拦截**，**nRIP重置为零**。
 
 nRIP是如果当前指令要遵循陷阱样式的调试异常，并且被拦截的指令不会导致控制流发生任何变化，则将被压入堆栈的RIP。如果截获的指令会导致控制流发生变化，则nRIP指向下一个顺序指令，而不是目标指令。
 
 有些异常即使在被拦截的情况下也会写入特殊的寄存器。有关详细信息，请参见第15.12节中的个别描述。
 
-`CPUID Fn8000_000A_EDX[NRIPS]`表示支持#VMEXIT上的NRIP保存。有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
+`CPUID Fn8000_000A_EDX[NRIPS]`表示支持`#VMEXIT`上的NRIP保存。有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
