--- Auto-Git Commit ---

--- a/Hided/Git/1. tips.md
+++ b/Hided/Git/1. tips.md
@@ -234,6 +234,28 @@ git log --pretty=format:%ae --date-order --since="2019-10-01" --until="2019-11-0
 git log --pretty=format:%ae --date-order --since="2019-11-01" --no-merges -- Documentation/virt/kvm/ -- include/trace/events/kvm.h -- include/uapi/asm-generic/kvm* -- include/uapi/linux/kvm* -- include/asm-generic/kvm* -- include/linux/kvm* -- include/kvm/iodev.h -- virt/kvm/* -- tools/kvm/ -- tools/testing/selftests/kvm/ -- arch/arm/include/uapi/asm/kvm* -- arch/arm/include/asm/kvm* -- arch/arm/kvm/ -- arch/arm64/include/uapi/asm/kvm* -- arch/arm64/include/asm/kvm* -- arch/arm64/kvm/ -- virt/kvm/arm/ -- include/kvm/arm_* -- arch/mips/include/uapi/asm/kvm* -- arch/mips/include/asm/kvm* -- arch/mips/kvm/ -- arch/powerpc/include/uapi/asm/kvm* -- arch/powerpc/include/asm/kvm* -- arch/powerpc/kvm/ -- arch/powerpc/kernel/kvm* -- arch/s390/include/uapi/asm/kvm* -- arch/s390/include/asm/gmap.h -- arch/s390/include/asm/kvm* -- arch/s390/kvm/ -- arch/s390/mm/gmap.c -- tools/testing/selftests/kvm/s390x/ -- tools/testing/selftests/kvm/*/s390x/ -- arch/x86/kvm/ -- arch/x86/kvm/*/ -- arch/x86/include/uapi/asm/kvm* -- arch/x86/include/uapi/asm/vmx.h -- arch/x86/include/uapi/asm/svm.h -- arch/x86/include/asm/kvm* -- arch/x86/include/asm/pvclock-abi.h -- arch/x86/include/asm/svm.h -- arch/x86/include/asm/vmx*.h -- arch/x86/kernel/kvm.c -- arch/x86/kernel/kvmclock.c | gawk -- '{ split($0,arr,"@"); ++c[arr[2]]; } END { for(cc in c) printf "%5d %s\n",c[cc],cc; }' | sort -n -r | head -n 20
 
 
+  441 intel.com
+  298 redhat.com
+  119 kernel.org
+  113 google.com
+   80 linux.ibm.com
+   63 huawei.com
+   46 arm.com
+   39 amd.com
+   37 tencent.com
+   34 oracle.com
+   34 gmail.com
+   26 de.ibm.com
+   24 linutronix.de
+   18 lemote.com
+    9 suse.de
+    9 linux.intel.com
+    9 linux.alibaba.com
+    9 kaod.org
+    6 ozlabs.org
+    6 infradead.org
+
+
 
 
 gawk -- '{ ++c[$0]; } END { for(cc in c) printf "%5d %s\n",c[cc],cc; }' | sort -u -n -r | head -n 5
