--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
@@ -42,13 +42,15 @@ no-kvmclock     `[X86,KVM] Disable paravirtualized KVM clock driver`
 
 ## 1.3. 半虚拟化时钟kvmclock
 
-为此kvm引入了基于半虚拟化的时钟kvmclock, 这种方式需要在guest上实现一个kvmclock驱动，建立guest os 到VMM的通道，这样通过这个通道 guest os 向 vmm 查询时间。`kvmclock`是一个**半虚拟化的时钟**，guest感知。guest向hypervisor询问时间，同时保证时钟的稳定和准确。默认情况下guest os会使用kvmclock，如fedora17
+为此kvm引入了基于半虚拟化的时钟kvmclock, 这种方式需要在guest上实现一个kvmclock驱动，建立guest os 到VMM的通道，这样通过这个通道 guest os 向 vmm 查询时间。`kvmclock`是一个**半虚拟化的时钟**，guest感知。
+
+**guest**向hypervisor询问时间，同时保证时钟的稳定和准确。默认情况下guest os会使用kvmclock.
 
 # 2. kvm clock 时钟
 
 ## 2.1. kvmclock 原理
 
-guest注册内存页，里面包含**kvmclock数据**，该页在guest整个生命周期内存在，hypervisor会持续写这个页。
+guest**注册内存页**，里面包含**kvmclock数据**，该页在guest整个生命周期内存在，**hypervisor**会**持续写这个页**。
 
 ```cpp
 // include\xen\arm\interface.h
