--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -1,5 +1,5 @@
 
 
-当guest试图通过IDT传递**异常或中断**时（例如`#PF`，因为VMM已调出guest的异常堆栈），有可能发生拦截。 在某些情况下，这种拦截可能会导致透明恢复guest所必需的信息丢失。 例如，在外部中断的情况下，处理器将已经通过PIC或APIC执行了一个中断应答周期以获得中断类型和向量，因此该中断不再挂起。
+当guest试图通过IDT传递**异常或中断**时（例如`#PF`，因为VMM已调出guest的异常堆栈），有可能发生拦截。 在某些情况下，这种拦截可能会导致**透明恢复guest**所必需的**信息丢失**。 例如，在**外部中断**的情况下，处理器将已经通过**PIC或APIC**执行了一个**中断应答周期**(interrupt acknowledge cycle)以获得**中断类型**和**向量**，因此**该中断不再挂起**。
 
-为了从这种情况中恢复过来，所有拦截都指示（在VMCB的EXITINTINFO字段中）它们是否发生在通过IDT的异常传递或中断传递期间。 即使不再可能重新创建所讨论的事件，该机制也可以使VMM完成截获的中断传递。
+为了**从这种情况中恢复过来**，所有拦截都**指示**（在VMCB的**EXITINTINFO字段**中）它们是否发生在通过IDT的异常传递或中断传递期间。 即使不再可能重新创建所讨论的事件，该机制也可以使VMM完成截获的中断传递。
