--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -8,4 +8,4 @@
 
 ![2020-09-16-22-00-21.png](./images/2020-09-16-22-00-21.png)
 
-尽管有指令名称，但出于EXITINTINFO的目的，INT1(也称为ICEBP)INT3和INTO指令（操作码F1h，CCh和CEh）引发的事件被视为异常，而不是软件中断。 只有INTn指令（操作码CDh）引发的事件才被视为软件中断。
+尽管有指令名称，但出于**EXITINTINFO**的目的，**INT1**(也称为ICEBP)、**INT3**和**INTO指令**(操作码分别是F1h，CCh和CEh)引发的事件**被视为异常**，而**不是软件中断**。 只有INTn指令（操作码CDh）引发的事件才被视为软件中断。
