--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -8,4 +8,12 @@
 
 ![2020-09-16-22-00-21.png](./images/2020-09-16-22-00-21.png)
 
-尽管有指令名称，但出于**EXITINTINFO**的目的，**INT1**(也称为ICEBP)、**INT3**和**INTO指令**(操作码分别是F1h，CCh和CEh)引发的事件**被视为异常**，而**不是软件中断**。 只有INTn指令（操作码CDh）引发的事件才被视为软件中断。
+尽管有指令名称，但出于**EXITINTINFO**的目的，**INT1**(也称为ICEBP)、**INT3**和**INTO指令**(操作码分别是F1h，CCh和CEh)引发的事件**被视为异常**，而**不是软件中断**。 只有**INTn指令**（操作码CDh）引发的事件才被视为**软件中断**。
+
+* 错误代码有效(Error Code Valid) - `bit 11`。如果**guest异常**push了**错误代码**，则设置为1；否则，清零。
+* 有效(Valid) - `bit 31`。如果guest试图通过IDT传递异常时发生拦截，则设置为1；否则，设置为1。 否则清零。
+* 错误代码(Errorcode) - `bit 63:32`。 如果EV设置为1，则保留guest异常将推送的错误代码；否则是**不确定**的。
+
+在有多个异常的情况下，EXITINTINFO会记录除最后一个（被拦截）之外的所有异常的汇总信息。
+
+例子: 
