--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/2. IDT中断交付期间的拦截.md
@@ -14,6 +14,6 @@
 * 有效(Valid) - `bit 31`。如果guest试图通过IDT传递异常时发生拦截，则设置为1；否则，设置为1。 否则清零。
 * 错误代码(Errorcode) - `bit 63:32`。 如果EV设置为1，则保留guest异常将推送的错误代码；否则是**不确定**的。
 
-在有多个异常的情况下，EXITINTINFO会记录除最后一个（被拦截）之外的所有异常的汇总信息。
+在有**多个异常**的情况下，EXITINTINFO会记录除最后一个（被拦截）之外的所有异常的汇总信息。
 
 例子: guest在发出#GP的过程中引发#GP（根据x86规则解析为#DF的情况），并且在尝试传递#DF的过程中发生了截获的#PF。 截获#PF时，EXITINTINFO表示#PF发生时，访客正在传递#DF。 有关截取的页面错误本身的信息在EXITCODE，EXITINFO1和EXITINFO2字段中进行编码。 如果VMM决定修复并取消#PF，则可以通过重新注入（请参见第15.20节）EXITINTINFO中记录的故障来恢复guest执行。 如果VMM决定应将#PF反映回guest，则它必须根据x86规则将EXITINTINFO中的事件与拦截的异常结合起来。 在这种情况下，＃DF加#PF会导致三重故障或停机。
