--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
@@ -1,2 +1,15 @@
 
-在guest中传递异常或中断时，处理器检查异常拦截，并在异常传送期间发生拦截的情况下更新EXITINTINFO的值。 以下伪代码概述了处理器如何传递事件（异常或中断）E。
+当guest中delivery异常或中断时，处理器检查**异常拦截**，并在异常delivery期间**发生拦截**的情况下更新**EXITINTINFO**的值。 以下伪代码概述了处理器如何传递事件（异常或中断）E。
+
+```cpp
+if E is an exception and is intercepted: #VMEXIT(E)
+E = (result of combining E with any prior events)
+if (result was #DF and #DF is intercepted): #VMEXIT(#DF)
+if (result was shutdown and shutdown is intercepted): #VMEXIT(#shutdown)
+EXITINTINFO = E // Record the event the guest is delivering.
+Attempt delivery of E through the IDT
+Note that this may cause secondary exceptions
+Once an exception has been successfully taken in the guest:
+EXITINTINFO.V = 0 // Delivery succeeded; no #VMEXIT. Dispatch to first instruction of handler
+```
+
