--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/7. 拦截操作/3. EXITINTINFO伪代码.md
@@ -20,4 +20,4 @@ Once an exception has been successfully taken in the guest:
 EXITINTINFO.V = 0 // Delivery succeeded; no #VMEXIT. Dispatch to first instruction of handler
 ```
 
-当异常触发拦截时，**EXITCODE**以及**可选**的**EXITINFO1**和**EXITINFO2**字段**始终反映拦截的异常**，而**EXITINTINFO**（如果标记为**有效**）则指示guest在拦截发生时试图传递的先前异常。
+当异常触发拦截时，**EXITCODE**以及**可选**的**EXITINFO1**和**EXITINFO2**字段**始终反映拦截的异常**，而**EXITINTINFO**（如果标记为**有效**）则指示guest在拦截发生时试图传递的**先前异常**。
