--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -23,10 +23,10 @@
 # 3. 反射`#DF`异常: 异常嵌套
 
 
-小结: 当Guest在一个异常向量A的delivery期间(可能是由中断导致的)发生了另外一个错误B(不一定是异常), 如果
+小结: 当Guest在一个**异常向量A**的delivery期间(可能是由中断导致的)发生了另外一个**错误B**(不一定是异常), 如果
 1. 错误B导致了`VM-exit`.
-* (必定)VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1, 表明是间接引发VM-exit.
-* (必定)VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息, **间接向量事件类信息字段**, 因为异常A不直接导致VM-exit.
+* (必定)VMM会看到`IDT-vectoring information` 字段的`bit 31` (valid位) 为1, 表明是间接引发`VM-exit`.
+* (必定)VMM看到`IDT-vectoring information`和`IDT-vectoring error code`记录异常A信息, **间接向量事件类信息字段**, 因为异常A不直接导致`VM-exit`.
 * 当错误B属于**外部中断**、**NMI**、**硬件异常**或者**软件异常**, VMM才会看到`VM-exit interruption information`和`VM-exit interruption error code`记录异常B信息, 直接向量事件类信息字段, 因为错误B直接导致了`VM-exit`
 * 当A和错误B都属于异常且符合下面两类情况(说明B是异常且exception bitmap相应位为1), 这两个异常则会转化成一个`DF`异常, 但是因为VM-exit了, 也记录了A和B的信息, 但是因为语义上已经转化成了`DF`, 所以VMM注入的话必须注入`DF`.
 2. 错误B没有导致`VM-exit`.
