--- a/Hided/Git/10. send-mail.md
+++ b/Hided/Git/10. send-mail.md
@@ -1,3 +1,70 @@
+
+1. 修改代码
+
+
+
+2. 提交时使用`-s`参数进行签名
+
+```
+git commit -s
+```
+
+3. 生成补丁
+
+使用`git format-patch`命令生成
+
+对于一个commit,
+
+```
+git format-patch -M origin/master -o outgoing/
+```
+
+```
+git format-patch -2 --cover-letter -o outgoing/
+```
+
+4. 检查补丁格式
+
+```
+scripts/get_maintainer.pl outgoing/*
+```
+
+5. 配置 send-mail , 强烈建议使用命令, 不要直接改config, 因为可能涉及格式问题
+
+```
+git config --global user.name "Haiwei Li"
+git config --global user.email lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserver smtp.gmail.com
+git config --global sendemail.smtpuser lihaiwei.kernel@gmail.com
+git config --global sendemail.smtpserverport 587
+git config --global sendemail.smtpencryption tls
+```
+
+```conf
+# ~/.gitconfig
+[sendemail]
+	from = lihaiwei.kernel@gmail.com
+	smtpserver = smtp.gmail.com
+	smtpserverport = 587
+	smtpencryption = tls
+	smtpuser = lihaiwei.kernel@gmail.com
+	smtppass = "XXX"
+	suppresscc = self
+	chainreplyto = false
+```
+
+6. 获取maintainer
+
+```
+scripts/get_maintainer.pl outgoing/*
+```
+
+7. 发送布丁
+
+```
+sudo git send-email --to linux-kernel@vger.kernel.org,kvm@vger.kernel.org,x86@kernel.org --cc pbonzini@redhat.com,sean.j.christopherson@intel.com,vkuznets@redhat.com outgoing/*
+```
+
 https://cloud.tencent.com/developer/section/1138666
 
 https://freemandealer.github.io/2015/07/05/making&sending_kernel_patches/
