--- a/Hided/Git/10. send-mail.md
+++ b/Hided/Git/10. send-mail.md
@@ -13,15 +13,30 @@ git commit -s
 
 使用`git format-patch`命令生成
 
-对于一个commit,
+对于一个commit, 不需要cover letter
 
 ```
-git format-patch -M origin/master -o outgoing/
+git format-patch -M origin/queue -o outgoing/
 ```
 
+`-M` 选项允许 Git 检查是否有对文件重命名的提交
+
+对于原型相关的代码开发，使用RFC前缀
+
 ```
+git format-patch --subject-prefix=RFC
+```
+
+对于多个commit, 需要cover letter
+
+```
+git format-patch -M origin/master -o outgoing/ --numbered --cover-letter
 git format-patch -2 --cover-letter -o outgoing/
 ```
+
+`-n`或`--numbered`, Name output in [PATCH n/m] format, even with a single patch.
+
+
 
 4. 检查补丁格式
 
