--- a/Hided/Git/10. send-mail.md
+++ b/Hided/Git/10. send-mail.md
@@ -36,7 +36,11 @@ git format-patch -2 --cover-letter -o outgoing/
 
 `-n`或`--numbered`, Name output in [PATCH n/m] format, even with a single patch.
 
+第二次发布的时候，需要使用-v 2参数
 
+```
+git format-patch -M origin/master -o outgoing/ --numbered --cover-letter -v 2
+```
 
 4. 检查补丁格式
 
@@ -77,7 +81,7 @@ scripts/get_maintainer.pl outgoing/*
 7. 发送布丁
 
 ```
-sudo git send-email --to linux-kernel@vger.kernel.org,kvm@vger.kernel.org,x86@kernel.org --cc pbonzini@redhat.com,sean.j.christopherson@intel.com,vkuznets@redhat.com outgoing/*
+sudo git send-email --to linux-kernel@vger.kernel.org,kvm@vger.kernel.org --cc pbonzini@redhat.com,sean.j.christopherson@intel.com outgoing/*
 ```
 
 https://cloud.tencent.com/developer/section/1138666
