--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -2583,7 +2583,7 @@ STAR寄存器的低32位对于Intel64机器来说是无效的，在调用时，*
 
 在**返回64位模式**时，**sysret指令**从`STAR[63：48]+16`得到CS selector，从`STAR[63：48]+8`得到SS selector。
 
-返回到compatibility模式时，sysret指令从`STAR[63：48]得到CS selector，从`STAR[63：48]+8`得到SS selector。
+返回到compatibility模式时，sysret指令从`STAR[63：48]`得到CS selector，从`STAR[63：48]+8`得到SS selector。
 
 注意：在AMD64上可以返回到compatibility模式，在Intel64上返回compatibility模式是无效的。
 
@@ -2622,6 +2622,8 @@ __set_syscall：
       wrmsr
       ret
 ```
+
+注: 可以看下`kvm-unit-test`中的`syscall.c`
 
 这个set\_syscall（）函数主要做三个工作。
 
