--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -2567,7 +2567,7 @@ sys_service（） stub 函数
 
 syscall/sysret指令实现了与sysenter/sysexit几乎完全相同的功能，只有些细微的区别，下图来自AMD64手册。
 
-![config](./images/67.png)
+![2020-09-17-16-41-15.png](./images/2020-09-17-16-41-15.png)
 
 与sysenter/sysexit指令相比，多了一个SFMASK寄存器，在**Intel64中去掉了CSTAR寄存器**，只有`IA32_STAR`、`IA32_LSTAR`及`IA32_SFMASK`寄存器。
 
