--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -2565,6 +2565,8 @@ sys_service（） stub 函数
 
 **syscall/sysret**指令是由**AMD**引入的，Intel对它提供了有限的支持，在**AMD64**中**syscall/sysret**可以完全用来**替代sysenter/sysexit**指令，在**Intel64**中**syscall/syscall**指令**只能使用在64**位模式下，也不支持在compatibility模式里使用。
 
+注: Intel使用只能在64位, 但是进入可以是compatibility模式???
+
 syscall/sysret指令实现了与sysenter/sysexit几乎完全相同的功能，只有些细微的区别，下图来自AMD64手册。
 
 ![2020-09-17-16-41-15.png](./images/2020-09-17-16-41-15.png)
