--- a/Virtualization/Learning/AMD虚拟化/SVM/8. 解码辅助/1. MOV CRx|DRx拦截.md
+++ b/Virtualization/Learning/AMD虚拟化/SVM/8. 解码辅助/1. MOV CRx|DRx拦截.md
@@ -1,11 +1,11 @@
 
-EXITINFO1字段保留一个标志，指示该指令是否为MOV CRx和GPR操作数的编号。 **MOV-to-CR指令**始终设置`bit 63`并提供**GPR编号**，以下指定的CR0除外。
+**EXITINFO1**字段保留一个标志，指示该指令是否为MOV CRx和GPR操作数的编号。 **MOV-to-CR指令**始终设置`bit 63`并提供**GPR编号**，以下指定的CR0除外。
 
 ![2020-09-17-22-09-00.png](./images/2020-09-17-22-09-00.png)
 
 `MOV-to-CR0 Special Case`. 如果指令是从`MOV-to-CR`，则提供了GPR编号；如果指令是**LMSW**或**CLTS**，则**不提供其他信息**，并且**不设置**`bit 63`。
 
-`MOV-from-CR0 Special Case`. 如果指令是`MOV-from-CR`，则提供**GPR编号**并置位`bit 63`；如果指令是**SMSW**，则不提供任何信息，并且不设置 `bit 63`。
+`MOV-from-CR0 Special Case`. 如果指令是`MOV-from-CR`，则提供**GPR编号**并置位`bit 63`；如果指令是**SMSW**，则不提供任何信息，并且**不设置** `bit 63`。
 
 注: GPR. General-purpose registers, 通用寄存器. 
 * 16位: AX, BX, CX, DX, DI, SI, BP, and SP. 
